--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -142,6 +142,11 @@ services:
       - SPRING_DATASOURCE_PASSWORD=barbershop123
       - REDIS_HOST=redis
       - REDIS_PORT=6379
+      - MAIL_HOST=${MAIL_HOST:-smtp.gmail.com}
+      - MAIL_PORT=${MAIL_PORT:-587}
+      - MAIL_USERNAME=${MAIL_USERNAME:-}
+      - MAIL_PASSWORD=${MAIL_PASSWORD:-}
+      - USER_SERVICE_URL=http://gateway-service:8080
     depends_on:
       postgres:
         condition: service_healthy
